# ia_graphic

./: .gitignore  CMakeLists.txt  main.cpp  maini.cpp
SDL/SDL2_ttf-2.20.1/cmake/: sdl2_ttf-config.cmake
include/: Visitado_State.h  celda.h  empty.h  end.h  estado.h  main_render_functions.h  obstacle.h  path.h  player.h  sdl_functions_own.h  world.h
src/: Visitado_State.cc  celda.cc  empty.cc  end.cc  estado.cc  main.cpp  main_render_functions.cc  obstacle.cc  path.cc  player.cc  sdl_functions_own.cc  world.cc
